--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@testing-library/react-native": "^12.8.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "jest-mock-extended": "^4.0.0-beta1",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
