--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "provider-test-utils",
-    "slug": "provider-test-utils",
+    "name": "react-context-test-utils",
+    "slug": "react-context-test-utils",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
