--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "provider-test-utils",
+  "name": "react-context-test-utils",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
